--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 BRIGHT_DATA_USERNAME=brd-customer-hl_df7d9e4b-zone-unblocker
 BRIGHT_DATA_PASSWORD=r7925v0thqjz
 MONGODB_URI=mongodb+srv://ognjenmobilni2407:Z2Hwri91FAdrAZsA@cluster0.ph40uec.mongodb.net/
+EMAIL_PASSWORD=&YeQ)N?v8e(q/V?
+EMAIL_ADDRESS=whattheheeeeeeeeeeeeeeell@outlook.com
